Replace Integer, Boolean, Float contructors with valueOf
Since valueOf makes use of caching, this reduces the number of objects
to be created.

Change-Id: Ie0b5d25b825e92a6e390476968fc08ec868f14f0