@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2002, 2014 Innoopract Informationssysteme GmbH and others.
+ * Copyright (c) 2002, 2015 Innoopract Informationssysteme GmbH and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -142,7 +142,7 @@ public class RWTLifeCycle extends LifeCycle {
           // IInterruptible phases return control to the user code, thus they don't call
           // Phase#execute()
           ServiceStore serviceStore = ContextProvider.getServiceStore();
-          serviceStore.setAttribute( CURRENT_PHASE, new Integer( i ) );
+          serviceStore.setAttribute( CURRENT_PHASE, Integer.valueOf( i ) );
           interrupted = true;
         } else {
           try {
