@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2013 EclipseSource and others.
+ * Copyright (c) 2011, 2015 EclipseSource and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -42,7 +42,7 @@ public final class StylesUtil {
     String styleName = constant.getName();
     try {
       constant.setAccessible( true );
-      Integer value = new Integer( constant.getInt( null ) ); // use null because we access statics
+      Integer value = Integer.valueOf( constant.getInt( null ) ); // use null because we access statics
       availableStyles.put( styleName, value );
     } catch( Exception e ) {
       String causeMessage = "Could not initialize SWT styles map with constant " + styleName;
