@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2012 Innoopract Informationssysteme GmbH and others.
+ * Copyright (c) 2007, 2015 Innoopract Informationssysteme GmbH and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -138,7 +138,7 @@ public final class TextSizeStorage {
 
   private void checkLowerStoreSizeBoundary( int maximumStoreSize ) {
     if( maximumStoreSize < MIN_STORE_SIZE ) {
-      Object[] param = new Object[] { new Integer( MIN_STORE_SIZE ) };
+      Object[] param = new Object[] { Integer.valueOf( MIN_STORE_SIZE ) };
       String msg = MessageFormat.format( "Store size must be >= {0}.", param );
       throw new IllegalArgumentException( msg );
     }
