@@ -386,7 +386,7 @@ public final class Entities {
         private IntHashMap mapValueToName = new IntHashMap();
 
         public void add(String name, int value) {
-            mapNameToValue.put(name, new Integer(value));
+            mapNameToValue.put(name, Integer.valueOf(value));
             mapValueToName.put(value, name);
         }
 
@@ -409,12 +409,12 @@ public final class Entities {
         protected Map mapValueToName;
 
         public void add(String name, int value) {
-            mapNameToValue.put(name, new Integer(value));
-            mapValueToName.put(new Integer(value), name);
+            mapNameToValue.put(name, Integer.valueOf(value));
+            mapValueToName.put(Integer.valueOf(value), name);
         }
 
         public String name(int value) {
-            return (String) mapValueToName.get(new Integer(value));
+            return (String) mapValueToName.get(Integer.valueOf(value));
         }
 
         public int value(String name) {
